Fix table order

--- a/web/view/course/courseAdd.html
+++ b/web/view/course/courseAdd.html
@@ -41,7 +41,7 @@
                                     <div id="courseNameDiv" class="form-group">
                                         <label for="courseName" class="col-sm-2 control-label">課程標題</label>
                                         <div class="col-sm-10">
-                                            <input id="courseName" name="courseName" class="form-control" placeholder="輸入課程標題">
+                                            <input id="courseName" name="courseName" class="form-control" placeholder="輸入課程標題"required>
                                         </div>
                                     </div>
                                     <div id="courseEditorDiv" class="form-group">
