--- a/web/view/store/storeAdd.html
+++ b/web/view/store/storeAdd.html
@@ -47,7 +47,7 @@
                                     <div id="storeNameDiv" class="form-group">
                                         <label for="storeName" class="col-sm-2 control-label">店名</label>
                                         <div class="col-sm-10">
-                                            <input id="storeName" name="storeName" class="form-control" placeholder="輸入店家名稱">
+                                            <input id="storeName" name="storeName" class="form-control" placeholder="輸入店家名稱"required>
                                         </div>
                                     </div>
                                     <div id="storeAddressDiv" class="form-group">
