--- a/web/view/education/educationList.html
+++ b/web/view/education/educationList.html
@@ -11,14 +11,15 @@
     $(function() {
         $('#educationListTable').DataTable({
             "columnDefs": [
-                { "orderable": false, "targets": 4 }
+                { "orderable": false, "targets": 2 },
+                { "orderable": false, "targets": 5 }
             ],
             "paging": false,
-            "lengthChange": false,
             "searching": false,
-            "ordering": true,
-            "info": true,
-            "autoWidth": false
+            "order": [[3,"desc"]],
+            "language":{
+                "info":"顯示 _START_ 到 _END_ -------- 文章總數 _TOTAL_ ",
+            }
         });
     });
 
@@ -72,7 +73,7 @@
             <!-- Main content -->
             <section class="content">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-10">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
