--- a/web/view/store/storeList.html
+++ b/web/view/store/storeList.html
@@ -10,15 +10,12 @@
     <script>
     $(function() {
         $('#storeListTable').DataTable({
-            "columnDefs": [
-                { "orderable": false, "targets": 7 }
-            ],
             "paging": false,
-            "lengthChange": false,
             "searching": false,
-            "ordering": true,
-            "info": true,
-            "autoWidth": false
+            "ordering":false,
+            "language":{
+                "info":"顯示 _START_ 到 _END_  ",
+            }
         });
     });
 
@@ -53,7 +50,7 @@
             <!-- Main content -->
             <section class="content">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-10">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
