--- a/web/view/ui/indexCoverSet.html
+++ b/web/view/ui/indexCoverSet.html
@@ -102,6 +102,68 @@
                                 </div>
                             </div>
                             \{/for\}
+                            <div class="form-group">
+                                <div class="col-md-4" style="text-align: center;">
+                                    <h4>小圖 - 23</h4>
+                                    <div class="form-inline">
+                                        <input type="file" class="uploadImage" name="index_img_23" id="index_23" data-input="false" accept="image/*" style="display: inline;"> \{if isset($images['index_img_23'])\}
+                                        <a class="btn btn-danger" onclick="deleteImg('\{$images[23].imageId\}');">
+                                            <i class="glyphicon glyphicon-remove"></i>
+                                        </a>
+                                        \{/if\}
+                                    </div>
+                                    <img id="index_23_img" class="img-thumbnail" src="\{if isset($images[23])\}\{$images[23].path\}\{else\}../image/cover_2.png\{/if\}"
+                                        alt="尚未上傳圖片">
+                                </div>
+                                <div class="col-md-4" style="text-align: center;">
+                                    <h4>小圖 - 24</h4>
+                                    <div class="form-inline">
+                                        <input type="file" class="uploadImage" name="index_img_24" id="index_24" data-input="false" accept="image/*" style="display: inline;"> \{if isset($images['index_img_24'])\}
+                                        <a class="btn btn-danger" onclick="deleteImg('\{$images[24].imageId\}');">
+                                            <i class="glyphicon glyphicon-remove"></i>
+                                        </a>
+                                        \{/if\}
+                                    </div>
+                                    <img id="index_24_img" class="img-thumbnail" src="\{if isset($images[24])\}\{$images[24].path\}\{else\}../image/cover_2.png\{/if\}"
+                                        alt="尚未上傳圖片">
+                                </div>
+                                <div class="col-md-4" style="text-align: center;">
+                                    <h4>小圖 - 25</h4>
+                                    <div class="form-inline">
+                                        <input type="file" class="uploadImage" name="index_img_25" id="index_25" data-input="false" accept="image/*" style="display: inline;"> \{if isset($images['index_img_25'])\}
+                                        <a class="btn btn-danger" onclick="deleteImg('\{$images[25].imageId\}');">
+                                            <i class="glyphicon glyphicon-remove"></i>
+                                        </a>
+                                        \{/if\}
+                                    </div>
+                                    <img id="index_25_img" class="img-thumbnail" src="\{if isset($images[25])\}\{$images[25].path\}\{else\}../image/cover_2.png\{/if\}"
+                                        alt="尚未上傳圖片">
+                                </div>
+                                <div class="col-md-4" style="text-align: center;">
+                                    <h4>小圖 - 26</h4>
+                                    <div class="form-inline">
+                                        <input type="file" class="uploadImage" name="index_img_26" id="index_26" data-input="false" accept="image/*" style="display: inline;"> \{if isset($images['index_img_26'])\}
+                                        <a class="btn btn-danger" onclick="deleteImg('\{$images[26].imageId\}');">
+                                            <i class="glyphicon glyphicon-remove"></i>
+                                        </a>
+                                        \{/if\}
+                                    </div>
+                                    <img id="index_26_img" class="img-thumbnail" src="\{if isset($images[26])\}\{$images[26].path\}\{else\}../image/cover_2.png\{/if\}"
+                                        alt="尚未上傳圖片">
+                                </div>
+                                <div class="col-md-4" style="text-align: center;">
+                                    <h4>小圖 - 27</h4>
+                                    <div class="form-inline">
+                                        <input type="file" class="uploadImage" name="index_img_27" id="index_27" data-input="false" accept="image/*" style="display: inline;"> \{if isset($images['index_img_27'])\}
+                                        <a class="btn btn-danger" onclick="deleteImg('\{$images[27].imageId\}');">
+                                            <i class="glyphicon glyphicon-remove"></i>
+                                        </a>
+                                        \{/if\}
+                                    </div>
+                                    <img id="index_27_img" class="img-thumbnail" src="\{if isset($images[27])\}\{$images[27].path\}\{else\}../image/cover_2.png\{/if\}"
+                                        alt="尚未上傳圖片">
+                                </div>
+                            </div>
                             <div class="box-footer" style="text-align: right;">
                                 <input id="action" type="hidden" name="action" value="editIndexCover">
                                 <input id="updateList" type="hidden" name="updateList" value="[]">
