Add backend user competence

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -116,6 +116,7 @@
                     </li>
                 </ul>
             </li>
+            \{if $smarty.session.user['competence'] == 0 \}
             <li>
                 <a href="#">
                     <i class="fa fa-th-list"></i>
@@ -129,6 +130,7 @@
                     </li>
                 </ul>
             </li>
+            \{/if\}
             <li>
                 <a href="#">
                     <i class="fa fa-th-list"></i>
@@ -220,6 +222,7 @@
                     </li>
                 </ul>
             </li>
+            \{if $smarty.session.user['competence'] == 0 \}
             <li>
                 <a href="#">
                     <i class="fa fa-th-list"></i>
@@ -244,6 +247,7 @@
                     </li>
                 </ul>
             </li>
+            \{/if\}
             <li>
                 <a href="#">
                     <i class="fa fa-th-list"></i>
