--- a/web/view/statistic/articleClick.html
+++ b/web/view/statistic/articleClick.html
@@ -69,6 +69,9 @@
                     <div class="col-xs-12">
                         <div class="box box-info">
                             <div class="box-body">
+                                \{if isset($startDate)\}
+                                <h3 style="color: red;">\{$startDate\} ~ \{$endDate\}</h3>
+                                \{/if\}
                                 <table id="manTable" class="row-border" cellspacing="0" style="width: 100%;">
                                     <thead>
                                         <tr>
@@ -77,7 +80,6 @@
                                             <th>文章標題</th>
                                             <th>文章內容</th>
                                             <th>建立時間</th>
-                                            <th>最後更新時間</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -88,7 +90,6 @@
                                             <td>\{$article.title\}</td>
                                             <td>\{$article.content\}</td>
                                             <td>\{$article.createTime\}</td>
-                                            <td>\{$article.lastUpdateTime\}</td>
                                         </tr>
                                         \{/foreach\}
                                     </tbody>
@@ -111,12 +112,11 @@
                 "info": false,
                 "searching": true,
                 "columnDefs": [
-                    { "targets": 0, "width": "10%", "orderable": true },
+                    { "targets": 0, "width": "15%", "orderable": true },
                     { "targets": 1, "width": "15%", "orderable": true },
                     { "targets": 2, "width": "15%", "orderable": true },
                     { "targets": 3, "width": "40%", "orderable": true },
-                    { "targets": 4, "width": "10%", "orderable": true },
-                    { "targets": 5, "width": "10%", "orderable": true }
+                    { "targets": 4, "width": "15%", "orderable": true }
                 ]
             });
 
