--- a/web/view/statistic/orderHistory.html
+++ b/web/view/statistic/orderHistory.html
@@ -69,15 +69,19 @@
                     <div class="col-xs-12">
                         <div class="box box-info">
                             <div class="box-body">
+                                \{if isset($startDate)\}
+                                <h3 style="color: red;">\{$startDate\} ~ \{$endDate\}</h3>
+                                \{/if\}
                                 <table id="manTable" class="row-border" cellspacing="0" style="width: 100%;">
                                     <thead>
                                         <tr>
                                             <th>滿意度</th>
+                                            <th>交易金額</th>
                                             <th>會員名稱</th>
-                                            <th>消費種類</th>
+                                            <th>性別</th>
                                             <th>點數</th>
                                             <th>結帳狀態</th>
-                                            <th>最後更新日期</th>
+                                            <th>消費日期</th>
                                             <th>詳細內容</th>
                                         </tr>
                                     </thead>
@@ -87,11 +91,12 @@
                                             <td>
                                                 \{if $order.score == null\} 0 \{else\} \{$order.score\} \{/if\}
                                             </td>
+                                            <td>\{$order.price\} 元</td>
                                             <td>\{$order.userName\}</td>
-                                            <td>\{$fieldMap[$order.actionState + 2]\}</td>
+                                            <td>\{$fieldMap[$order.gender]\}</td>
                                             <td>\{$order.point\}</td>
-                                            <td>\{$fieldMap[$order.checkState + 5]\}</td>
-                                            <td>\{$order.lastUpdateTime\}</td>
+                                            <td>\{$fieldMap[$order.checkState + 1]\}</td>
+                                            <td>\{$order.createTime\}</td>
                                             <td>
                                                 <a class="btn btn-sm btn-info" href="userController.php?action=userShoppingRecordPrepare&userId=\{$order.userId\}">
                                                     <i class="glyphicon glyphicon-menu-hamburger"></i>
@@ -122,10 +127,11 @@
                     { "targets": 0, "width": "10%", "orderable": true },
                     { "targets": 1, "width": "15%", "orderable": true },
                     { "targets": 2, "width": "15%", "orderable": true },
-                    { "targets": 3, "width": "15%", "orderable": true },
+                    { "targets": 3, "width": "10%", "orderable": true },
                     { "targets": 4, "width": "15%", "orderable": true },
                     { "targets": 5, "width": "15%", "orderable": true },
                     { "targets": 6, "width": "15%", "orderable": true },
+                    { "targets": 7, "width": "10%", "orderable": true }
                 ]
             });
 
