user: Add transpoting state

--- a/web/view/user/userShoppingAdd.html
+++ b/web/view/user/userShoppingAdd.html
@@ -165,6 +165,13 @@ $(document).ready(function() {
                                                 已結清
                                             </label>
                                         </div>
+
+                                        <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="checkState" value="5">
+                                                <label class="form-check-label" for="exampleRadios3">
+                                                    運送中
+                                                </label>
+                                        </div>
                                 </div>
                             </div>
 
