--- a/web/view/user/userShoppingRecord.html
+++ b/web/view/user/userShoppingRecord.html
@@ -9,7 +9,8 @@ $(document).ready(function() {
         1: '非金錢往來行為',
         2: '未付款',
         3: '已付訂金',
-        4: '已結清'
+        4: '已結清',
+        5: '運送中'
     };
     $(".checkState").each(function(){
         var mapping = checkStateMapping[$(this).attr('value')];
